--- a/style.css
+++ b/style.css
@@ -1,19 +1,63 @@
 .container {
-    text-align: center;
+text-align: center;
+}
+
+.paypalbtns-container {
+    position: relative;
+    z-index: 0;
 }
 
 .amountData {
-    display: inline;
+display: inline;
 }
 
 .mainTitle {
-    font-family: Arial, Helvetica, sans-serif;
+font-family: Arial, Helvetica, sans-serif;
 }
 
 header {
-    margin-bottom: 40px;
+margin-bottom: 40px;
 }
 
 #paypalBtns {
-    margin-top: 40px;
+margin-top: 40px;
+}
+
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content {
+    margin-top: 50px;
+    background-color: #90EE90;
+    margin: 10% auto; /* 10% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 20%;
+    border-radius: 10px;
+}
+
+/* The Close Button */
+#close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+#close:hover,
+#close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
 }
